--- a/assignments/8-conditionals/css/a8styles.css
+++ b/assignments/8-conditionals/css/a8styles.css
@@ -5,7 +5,7 @@
 body { background-color: purple; }
 h2 { color: green; }
 h4 { color: black; }
-.footer { text-align: center; vertical-align: middle; color: white; background-color: black; margin: 0 auto; min-height: 70px; max-height: 70px; }
+.footer { display: flex; justify-content: center; align-items: center; text-align: center; color: white; background-color: black; min-height: 70px; max-height: 70px; }
 #topnavbar { min-height: 70px; max-height: 70px; background-color: black; color: white; }
 
 /* Desktop defaults */
