--- a/project/homepage/css/greenville.css
+++ b/project/homepage/css/greenville.css
@@ -9,7 +9,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     color: #1a1a1a; /* near-black text */
     /*background-color: black; */
-    background-color: #f4f7f5;  soft gray-green background */
+    background-color: #f4f7f5;  /*soft gray-green background */
     width: 100%;
 }
 
