--- a/project/greenvilletemplate/css/greenville.css
+++ b/project/greenvilletemplate/css/greenville.css
@@ -158,9 +158,7 @@ text-align: center;
     text-align: left;
 }
 
-.right-links .material-icons {
-  color: white; /* or #ccc for light grey */
-}
+
 
 /*The Features are below the griddata */
 .features h2 {
@@ -245,3 +243,7 @@ text-align: center;
 .grid-row span {
     color: #1a1a1a;
 }
+
+/*Overide the Material UI default Colors*/
+.right-links { --md-sys-color-primary: #ffffff; --md-sys-color-on-primary: #ffffff; --md-sys-color-on-surface: #ffffff; } 
+.right-links .material-icons { color: #ffffff !important; }
