--- a/project/greenvilletemplate/css/greenvilletwo.css
+++ b/project/greenvilletemplate/css/greenvilletwo.css
@@ -8,6 +8,15 @@ body {
     color: #1a1a1a;
     width: 100%;
 }
+.features
+{
+text-align: center;
+}
+.feature
+{
+text-align: center;
+}
+
 
 * {
     box-sizing: border-box;
