--- a/project/greenvilletemplate/css/greenvilletwo.css
+++ b/project/greenvilletemplate/css/greenvilletwo.css
@@ -282,6 +282,7 @@ header {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
     gap: 25px;
+    text-align: center;
 }
 
 .feature-card {
