--- a/project/greenvilletemplate/css/greenvilletwo.css
+++ b/project/greenvilletemplate/css/greenvilletwo.css
@@ -377,6 +377,8 @@ header {
     background: white;
     padding: 20px;
     border-radius: 5px;
+    width: 400px;
+    max-width: 33%;
 }
 
 .middle-columns ul 
