--- a/project/homepage/css/cart.css
+++ b/project/homepage/css/cart.css
@@ -43,7 +43,7 @@ button { width: 150px; height: 60px; }
 
 body { font-family: Arial, sans-serif; padding: 20px; }
 h1 { text-align: center; }
-.container { width: 1500px; }
+.container { width: 1500px; background-color: lightgreen;}
   
 #catalogue { min-width: 80%; max-width: 30%; font-size: 9pt; height: 300px; }
 #someselected { min-width: 80%; max-width: 450px; font-size: 9pt;  height: 300px;}
