--- a/project/homepage/css/greenville.css
+++ b/project/homepage/css/greenville.css
@@ -83,8 +83,8 @@ footer {
     position: relative;
 }
 #sales{ position: relative; margin: 0 auto; width: 85%; background-color: darkgreen;}
-.gacontainer{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; line-height: 1.6; text-align: center; background-color: black;}
-.container2{position: relative; margin: 0 auto; width: 85%;  border-radius: 5px; width: 100%; position: relative; background-color: black;}
+.gacontainer{position: relative; margin: 0 auto; max-width: 1600px; min-width: 90%;  border-radius: 5px; line-height: 1.6; text-align: center; background-color:#f4f7f5;}
+.container2{position: relative; margin: 0 auto; max-width: 1600px; min-width:90%;  border-radius: 5px; background-color: #f4f7f5;}
 nav { background: #000000; border-bottom: 1px solid #1f3b2d; padding: 0; } 
 nav .menu { list-style: none; margin: 0; padding: 0; display: flex; justify-content: center; align-items: center; } 
 nav .menu > li { position: relative; } 
