--- a/project/homepage/css/layout.css
+++ b/project/homepage/css/layout.css
@@ -510,11 +510,11 @@ max-height: 200px;
 }
 }
 /* ----------------------------- */
-/* MASTER CONTAINER     */
+/* MASTER container2     */
 /* ----------------------------- */
 
 
-.mastercontainer
+.mastercontainer2
 {
     max-width: 98%;
     margin: 0 auto;
