--- a/project/homepage/css/site.css
+++ b/project/homepage/css/site.css
@@ -15,7 +15,7 @@
         color: white;
     }
 
-    /* Dropdown container */
+    /* Dropdown container2 */
     .dropdown {
         position: relative;
         display: inline-block;
@@ -68,7 +68,7 @@
         text-decoration: underline;
     }
 
-  .container
+  .container2
     {
     position: relative;
     width: 90%;
