--- a/project/homepage/css/dropmenu.css
+++ b/project/homepage/css/dropmenu.css
@@ -86,7 +86,7 @@ body, button { /* Apply Roboto to body and button */
     align-items: center;
 }
 
-.features .container {
+.features .container2 {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
@@ -190,7 +190,7 @@ body, button { /* Apply Roboto to body and button */
       margin-left: 15px;
     }
 
-    .panel-container {
+    .panel-container2 {
       display: flex;
       flex-direction: row;
       gap: 15px;
@@ -221,7 +221,7 @@ body, button { /* Apply Roboto to body and button */
       align-items: center;
     }
 
-    .features .container {
+    .features .container2 {
       display: flex;
       flex-wrap: wrap;
       gap: 15px;
