--- a/project/homepage/css/greenville.css
+++ b/project/homepage/css/greenville.css
@@ -5,12 +5,12 @@ h3 {
     text-align: left;
     }
 body {
-    margin: 0;
+    margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;
     color: #1a1a1a; /* near-black text */
     /*background-color: black; */
     background-color: #f4f7f5;  /*soft gray-green background */
-    width: 100%;
+    max-width: 1600px;
 }
 
 header {
