--- a/project/homepage/css/greenville.css
+++ b/project/homepage/css/greenville.css
@@ -164,6 +164,7 @@ text-align: center;
     display: flex;
     gap: 10px;
     align-items: center;
+    color: white;
 }
 
 /* Force Material Web Components to use white */
