--- a/project/homepage/css/layout.css
+++ b/project/homepage/css/layout.css
@@ -65,6 +65,9 @@ nav.main-nav a:hover {
     gap: 20px;
     padding: 20px;
     max-width: 1570px;
+    min-height: 400px;
+    max-height: 800px;
+    height: 400px;
     margin: 0 auto;
     background: white;
     border-radius: 5px;
