--- a/project/homepage/css/greenville.css
+++ b/project/homepage/css/greenville.css
@@ -287,7 +287,7 @@ text-align: center;
     }
 
 //RECOMMENDED STYLING OF MATERIAL UI ICONS - BASE IS TO SIZE FOR TEXT
-    md-text-button.icon-only { 
+     md-text-button.icon-only { 
         --md-text-button-container-height: 32px; 
         --md-text-button-container-shape: 4px; 
         padding: 0; min-width: 32px; 
@@ -295,8 +295,9 @@ text-align: center;
     
     md-text-button.icon-only .material-icons 
     { 
-        font-size: 20px; 
+        font-size: 15px; 
         line-height: 1; 
+        padding: 5px;
     }
 
 
