--- a/assignments/9-loops/css/layout.css
+++ b/assignments/9-loops/css/layout.css
@@ -272,11 +272,13 @@ footer {
     .column
     {
         text-align: center;
+        margin: 0 auto;
     }
 
     .column.img
     {
         text-align: center;
+        margin: 0 auto;
     }
 
     
