--- a/assignments/9-loops/css/a9styles.css
+++ b/assignments/9-loops/css/a9styles.css
@@ -1,11 +1,11 @@
 /* Assignment 8 styles */
 #secone { text-align: center; margin-bottom: 100px; margin-top: 100px; }
 #hiding { display: none; }
-.pagecontainer { position: relative; margin: 0 auto; max-width: 1600px; background-color: lightgrey; min-height: 800px; max-height: 90%; }
+.pagecontainer { position: relative; margin: 0 auto; max-width: 1600px; background-color: lightgrey; min-height: 800px; max-height: 90%; margin-bottom: 20px; }
 body { background-color: purple; }
 h2 { color: green; }
 h4 { color: black; }
-.footer { display: flex; justify-content: center; align-items: center; text-align: center; color: white; background-color: black; min-height: 70px; max-height: 70px; }
+footer { text-align: center; color: white; background-color: black; min-height: 70px; max-height: 70px; }
 #topnavbar { min-height: 40px; max-height: 42px; background-color: black; color: white; vertical-align: middle;}
 
 /* Desktop defaults */
