--- a/assignments/9-loops/css/fishtank.css
+++ b/assignments/9-loops/css/fishtank.css
@@ -1,5 +1,7 @@
  .assign9 {
       max-width: 1200px;
+      height: 550px;
+      max-height: 550px;
       margin: 0 auto;
       padding: 20px;
     }
