Update the Products Links

--- a/project/homepage/css/cart.css
+++ b/project/homepage/css/cart.css
@@ -22,7 +22,7 @@ width: 100%;
 .parkinfo { float: left; width: 49%; padding: 10px; height: 500px; overflow-y: auto;}
 .cartinfo { float: left; width: 49%; padding: 10px; height: 500px; overflow-y: auto;}
 
-#productstuff { background-color: #aaa; height: 640px; width: 95%; }
+licenses6.htmltuff { background-color: #aaa; height: 640px; width: 95%; }
 #interiorpanel { margin-left: 50px; height: 150px; width: 95%;   margin-bottom: 5px;
   padding-bottom: 5px;}
 
