--- a/assignments/9-loops/css/layout.css
+++ b/assignments/9-loops/css/layout.css
@@ -290,6 +290,7 @@ footer {
     }
 
     .assign9 .row {
+        display: flex;
         flex-direction: column;
         gap: 15px;
         padding: 10px;
