--- a/assignments/9-loops/css/layout2.css
+++ b/assignments/9-loops/css/layout2.css
@@ -190,7 +190,9 @@ footer {
 /* ------------------------------------------------------ */
 
 @media (max-width: 1000px) {
-
+  
+    html, body { height: 100%; } 
+    .pagecontainer { min-height: 100%; display: flex; flex-direction: column; } 
     nav.main-nav ul {
         flex-direction: column;
         text-align: center;
@@ -248,6 +250,9 @@ footer {
     .assign9 img {
         max-width: 80%;
     }
+  
+    
+    footer { margin-top: auto; }
 }
 
 /* ------------------------------------------------------ */
