--- a/assignments/10-arrays/css/a10styles.css
+++ b/assignments/10-arrays/css/a10styles.css
@@ -12,6 +12,10 @@ body {
     background: #f4f4f4;
 }
 
+topnavbar { color: white };
+topnavbar:visited {color: white};
+
+
 /* ------------------------------------------------------ */
 /* HEADER                                                 */
 /* ------------------------------------------------------ */
