--- a/assignments/10-arrays/css/a10styles.css
+++ b/assignments/10-arrays/css/a10styles.css
@@ -12,8 +12,8 @@ body {
     background: #f4f4f4;
 }
 
-topnavbar { color: white };
-topnavbar:visited {color: white};
+topnavbar { color: white; }
+topnavbar:visited {color: white;}
 
 
 /* ------------------------------------------------------ */
