--- a/assignments/10-arrays/css/a10styles.css
+++ b/assignments/10-arrays/css/a10styles.css
@@ -14,9 +14,9 @@ body {
 
 topnavbar { color: white; }
 topnavbar:visited {color: white;}
-a {color: white; text_decoration: none;}
-a:visited{ color: white; font-size: 12pt; text_decoration: none;}
-mobilemenu:visited {color: white; font-size: 12pt;}
+a {color: white; text-decoration: none;}
+a:visited{ color: white; font-size: 12pt; text-decoration: none;}
+mobilemenu:visited {color: white; font-size: 12pt; text-decoration: white;}
 
 
 /* ------------------------------------------------------ */
