--- a/assignments/10-arrays/css/a10styles.css
+++ b/assignments/10-arrays/css/a10styles.css
@@ -16,7 +16,7 @@ topnavbar { color: white; }
 topnavbar:visited {color: white;}
 a {color: white; text-decoration: none;}
 a:visited{ color: white; font-size: 12pt; text-decoration: none;}
-mobilemenu:visited {color: white; font-size: 12pt; text-decoration: white;}
+mobilemenu:visited {color: white; font-size: 12pt; text-decoration: none;}
 
 
 /* ------------------------------------------------------ */
