--- a/project/homepage/pricing/css/dropmenu.css
+++ b/project/homepage/pricing/css/dropmenu.css
@@ -33,7 +33,7 @@ body, button { /* Apply Roboto to body and button */
       align-items: center;
     }
 .navbar .nav-left a {
-  background-color: #3E5BA8; /* Slightly lighter blue than navbar */
+  background-color: black; /* Slightly lighter blue than navbar */
   color: white;
   text-decoration: none;
   font-weight: bold;
